<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparente"
    tools:context=".FishColectionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/MoneyField_width"
            android:layout_height="@dimen/MoneyField_height"
            android:src="@drawable/ic_moneyfield"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="@dimen/Plusbt_width"
            android:layout_height="@dimen/Pusbt_height"
            android:backgroundTint="@color/verde"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneyField_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/constraint_mgTop"
        android:paddingBottom="@dimen/constraint_pd"
        android:paddingTop="@dimen/constraint_pd"
        android:paddingEnd="@dimen/constraint_pd"
        android:paddingStart="@dimen/constraint_pd">

        <ImageView
            android:id="@+id/locationchoice_title"
            android:layout_width="@dimen/localtitle_Width"
            android:layout_height="@dimen/localtitle_Height"
            android:src="@drawable/locais_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />
        
        <Button
            android:id="@+id/local1_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/localbt_Height"
            app:layout_constraintTop_toBottomOf="@id/locationchoice_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:text="@string/local1bt_txt"
            />

        <Button
            android:id="@+id/local2_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/localbt_Height"
            app:layout_constraintTop_toBottomOf="@id/local1_bt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/localbt_mgTop"
            android:text="@string/local2bt_txt"
            />

        <Button
            android:id="@+id/local3_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/localbt_Height"
            app:layout_constraintTop_toBottomOf="@id/local2_bt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/localbt_mgTop"
            android:text="@string/local3bt_txt"
            />

        <Button
            android:id="@+id/local4_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/localbt_Height"
            app:layout_constraintTop_toBottomOf="@id/local3_bt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/localbt_mgTop"
            android:text="@string/local4bt_txt"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>