<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColectionFragment"
    android:background="@color/transparente">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/MoneyField_width"
            android:layout_height="@dimen/MoneyField_height"
            android:src="@drawable/ic_moneyfield"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005"
            app:layout_constraintHorizontal_bias="0.96"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/Plusbt_width"
            android:layout_height="@dimen/Pusbt_height"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            android:padding="0dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:backgroundTint="@color/verde"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018"
            app:layout_constraintHorizontal_bias="0.80"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneyField_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027"
            app:layout_constraintHorizontal_bias="0.93"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/constraint_mgTop"
        android:paddingBottom="@dimen/constraint_pd"
        android:paddingTop="@dimen/constraint_pd"
        android:paddingEnd="@dimen/constraint_pd"
        android:paddingStart="@dimen/constraint_pd">

        <Button
            android:id="@+id/fishcolection_bt"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.18"
            android:text="@string/fishcolection_txt"/>

        <Button
            android:id="@+id/itenscolection_bt"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@id/fishcolection_bt"
            app:layout_constraintStart_toStartOf="@id/fishcolection_bt"
            app:layout_constraintEnd_toEndOf="@id/fishcolection_bt"
            android:layout_marginTop="40dp"
            android:text="@string/itenscolection_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>